# byesamosa

./: .env.example  .gitignore  CLAUDE.md  README.md  ___All_Errors.txt  pyproject.toml
byesamosa/: .env.example  .gitignore  CLAUDE.md  pyproject.toml  streamlit_app.py
byesamosa/docs/: DATA_LAYER.md  DESIGN-dashboard-v2.md  DESIGN.md  PLAN.md  PLAN_PULL_COMMAND.md  STEP_2.3_IMPLEMENTATION.md  STEP_2_2_SAMPLE_OUTPUT.md
byesamosa/docs/archive/: architecture_design.md
byesamosa/docs/mockups/: dashboard.html
byesamosa/frontend/app/: globals.css  layout.tsx  page.tsx
byesamosa/frontend/components/: ActionItems.tsx  Header.tsx  RadarChart.tsx  ReasoningChain.tsx  VitalCard.tsx  Vitals.tsx
byesamosa/scripts/: generate_mock_data.py  test_ai_engine.py
byesamosa/src/byesamosa/: __init__.py  __main__.py  config.py  pipeline.py
byesamosa/tests/: test_ai_engine.py  test_queries.py
docs/: PLAN-dashboard-v2.md  PLAN-harden-pull.md  PLAN-ui-revamp.md  PLAN.md  PLAN_PULL_COMMAND.md
docs/archive/: sample_prompt.txt
frontend/: package-lock.json  package.json
frontend/app/: loading.tsx  page.tsx
frontend/components/: AIBriefing.tsx  AnimatedCard.tsx  DataStatus.tsx  HrvRhrTrend.tsx  PullButton.tsx  RefreshButton.tsx  ScoreCard.tsx  ScoreCardsRow.tsx  SectionDivider.tsx  SleepScoreTrend.tsx  TrendCharts.tsx  WorkoutRecovery.tsx
frontend/lib/: api.ts  constants.ts  types.ts  utils.ts
scripts/: generate_mock_json.py  verify_ai_engine.py
src/byesamosa/: config.py  pipeline.py
tests/: __init__.py  conftest.py  test_models.py  test_store.py
(+27 files in other folders)
